--- a/index.html
+++ b/index.html
@@ -1,34 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Figtree&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Blog preview card</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Frontend Mentor | Blog preview card</title>
+  </head>
+  <body>
+    <article class="blog-card">
+      <img
+        class="card__thumbnail"
+        src="assets/illustration-article.svg"
+        alt="Abstract geometric shapes representing HTML/CSS concepts"
+      />
+      <div class="card">
+        <mark class="card_category">Learning</mark>
+        <date class="card_date" date="2023-12-21"> Published 21 Dec 2023</date>
+        <h1 class="card_title">HTML & CSS foundations</h1>
+        <p class="card-description">
+          These languages are the backbone of every website, defining structure,
+          content, and presentation. Greg Hooper
+        </p>
+        <div class="card__author">
+          <img class="author__avatar" 
+               src="assets/images/image-avatar.webp" 
+               alt="Greg Hooper's profile picture">
+               
+          <span class="author__name">Greg Hooper</span>
+      </div>
 
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </article>
+  </body>
 </html>
