--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <article class="blog-card">
+      <div class="card-holder">
       <img
         class="card__thumbnail"
         src="assets/illustration-article.svg"
@@ -41,13 +42,15 @@
                
           <span class="author__name">Greg Hooper</span>
       </div>
+    </div>
 
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </div>
+      
     </article>
+    <!-- <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div> -->
   </body>
 </html>
